# platform.core.security.auth-fw

./: AUTHORS  CMakeLists.txt  README
packaging/: auth-fw.spec  authentication-server.spec
pkgconfig/: CMakeLists.txt  auth-fw-admin.pc.in  auth-fw.pc.in  authentication-server-admin.pc.in  authentication-server.pc.in
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client-common.cpp  client-password-admin.cpp  client-password.cpp
src/client/include/: client-common.h
src/cmd/: CMakeLists.txt  auth-fw-cmd.cpp
src/common/: CMakeLists.txt  error-description.cpp  message-buffer.cpp  policy.cpp  protocols.cpp  smack-check.cpp  user-check.cpp
src/common/include/: connection-info.h  error-description.h  message-buffer.h  policy.h  protocols.h  smack-check.h  symbol-visibility.h  user-check.h
src/dpl/core/include/dpl/: assert.h  binary_queue.h  colors.h  exception.h  fstream_accessors.h  noncopyable.h  noreturn.h  serialization.h  singleton.h  singleton_impl.h  singleton_safe_impl.h
src/dpl/core/src/: assert.cpp  binary_queue.cpp  colors.cpp  exception.cpp  noncopyable.cpp
src/dpl/log/include/dpl/log/: abstract_log_provider.h  dlog_log_provider.h  log.h  old_style_log_provider.h
src/dpl/log/src/: abstract_log_provider.cpp  dlog_log_provider.cpp  log.cpp  old_style_log_provider.cpp
src/include/: CMakeLists.txt  auth-passwd-admin.h  auth-passwd-error.h  auth-passwd-policy-types.h  auth-passwd.h
src/server/: CMakeLists.txt
src/server/main/: generic-socket-manager.cpp  server-main.cpp  smack-check.cpp  socket-manager.cpp  user-check.cpp
src/server/main/include/: generic-event.h  generic-socket-manager.h  service-thread.h  smack-check.h  socket-manager.h  user-check.h
src/server/service/: password-file-buffer.cpp  password-file.cpp  password-manager.cpp  password.cpp  policy-file.cpp  policy-manager.cpp
src/server/service/include/: password-exception.h  password-file-buffer.h  password-file.h  password-manager.h  password.h  policy-file.h  policy-manager.h
systemd/: CMakeLists.txt  auth-fw-passwd-check.socket.in  auth-fw-passwd-policy.socket.in  auth-fw-passwd-reset.socket.in  auth-fw-passwd-set.socket.in  auth-fw.service.in  authentication-server-passwd-check.socket  authentication-server-passwd-policy.socket  authentication-server-passwd-policy.socket.in  authentication-server-passwd-reset.socket  authentication-server-passwd-set.socket  authentication-server.service  authentication-server.service.in  authentication-server.target
