SET(INCLUDE_PATH ${PROJECT_SOURCE_DIR}/src/include)
SET(COMMON_PATH  ${PROJECT_SOURCE_DIR}/src/common)
SET(CLIENT_PATH  ${PROJECT_SOURCE_DIR}/src/client)
SET(SERVER_PATH  ${PROJECT_SOURCE_DIR}/src/server)
SET(PLUGIN_PATH  ${PROJECT_SOURCE_DIR}/src/plugin)
SET(DPL_PATH     ${PROJECT_SOURCE_DIR}/src/dpl)

SET(TARGET_SERVER ${SERVICE_NAME})
SET(TARGET_CLIENT ${SERVICE_NAME}-client)
SET(TARGET_CLIENT_ADMIN ${SERVICE_NAME}-client-admin)
SET(TARGET_COMMON ${SERVICE_NAME}-commons)

ADD_SUBDIRECTORY(include)
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(client)
ADD_SUBDIRECTORY(server)
