INCLUDE_DIRECTORIES(
    ${INCLUDE_PATH}
    ${COMMON_PATH}/include
    )

SET(CMD_SOURCES
    auth-fw-cmd.cpp
    )

SET_SOURCE_FILES_PROPERTIES(${CMD_SOURCES}
    PROPERTIES
        COMPILE_FLAGS "-D_GNU_SOURCE -fvisibility=hidden -fPIE"
    )

ADD_EXECUTABLE(${TARGET_CMD} ${CMD_SOURCES})

TARGET_LINK_LIBRARIES(${TARGET_CMD}
    ${TARGET_COMMON}
    ${TARGET_CLIENT}
    ${TARGET_CLIENT_ADMIN}
    )

INSTALL(TARGETS ${TARGET_CMD} DESTINATION ${SBIN_DIR})
